<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Komunikator</string>

    <!-- validation Errors -->
    <string name="err_name">The name field is required.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_password">The password must be at least 6 characters.</string>

    <string name="facebook_app_id">YOUR_APP_ID</string>
    <string name="fb_login_protocol_scheme">YOUR_THING</string>
    <string name="name">Imię</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Logowanie</string>
    <string name="register">Rejestracja</string>
    <string name="get_posts">Wiadomości</string>
    <string name="not_yet_registered">Rejestracja</string>
    <string name="log">Zaloguj</string>
</resources>
