<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:padding="8dp">


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email_icon"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:drawableStart="@drawable/lock_icon"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/go_to_register"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/not_yet_registered" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_below="@+id/form_container"
        android:layout_alignStart="@+id/form_container"
        android:layout_alignLeft="@+id/form_container"
        android:layout_alignEnd="@+id/form_container"
        android:layout_alignRight="@+id/form_container"
        android:layout_gravity="center"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:background="@drawable/facebook_selector" />


</RelativeLayout>
